--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "engines": {
     "node": "8.12.0",
-    "npm": "6.4.1"
+    "npm": "6.4.1",
+    "yarn": "1.10.1"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
